# SectorNet

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md  deploy.sh  dfx.json  mops.toml  package-lock.json  package.json
backend/global_feed_canister/: Cargo.toml  global_feed_canister.did  lib.rs  main.mo
backend/governance_canister/: Cargo.toml  lib.rs  main.mo
backend/invite_canister/: Cargo.toml  lib.rs  main.mo
backend/sector_canister/: Cargo.toml  lib.rs  main.mo  sector_canister.did
backend/sector_factory_canister/: Cargo.toml  lib.rs  main.mo  sector_factory_canister.did
backend/sector_registry_canister/: Cargo.toml  lib.rs  main.mo  sector_registry_canister.did
backend/user_canister/: Cargo.toml  lib.rs  main.mo  user_canister.did
frontend/: App.jsx  index.css  index.html  package.json  vite.config.js
frontend/components/auth/: CreateProfileModal.jsx
frontend/components/common/: ComingSoon.jsx  LoadingSpinner.jsx
frontend/components/layout/: AnimatedBackground.jsx  MainLayout.jsx  Pane1_Navigator.jsx  Pane2_ContextualHub.jsx  Pane3_ContentDisplay.jsx
frontend/components/modals/: CreateOrJoinSectorModal.jsx  CreateProfileModal.jsx
frontend/components/views/: ChatView.jsx  GlobalFeedView.jsx  KeyRotationManager.jsx  SectorFeedView.jsx  SectorManagementView.jsx  WelcomeGuideView.jsx
frontend/pages/: LandingPage.jsx
frontend/services/: cryptoService.js  ic.js  roleCache.js  userCache.js
frontend/store/: authStore.js  chatStore.js  globalFeedStore.js  sectorRegistryStore.js  sectorStore.js  uiStore.js
(+29 files in other folders)
