[workspace]
members = [
    "backend/user_canister",
    "backend/sector_factory_canister",
    "backend/sector_registry_canister",
    "backend/invite_canister",
    "backend/sector_canister",
    "backend/global_feed_canister",
    "backend/governance_canister",
]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z' # Optimize for size
strip = true