[package]
name = "sector_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10.13"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde", "js"] } # For unique IDs
hex = "0.4" # For converting random bytes to text